Filter menu alignment.  Still need to fix parent hover styling on svgs

--- a/src/components/search/styles/EventFilter.sass
+++ b/src/components/search/styles/EventFilter.sass
@@ -16,11 +16,23 @@
 
   &.active
     background-color: #F2F2F2
+  &.inverted
+    color: #fff
+    opacity: 0.7
+    &:hover
+      opacity: 1
+      color: #767676
+
+      .chevron.svg.chevron-svg
+        color: red
+
+
 
 .filter-title
   display: flex
   margin: 0.5em
   font-weight: inherit
+  
 
 .filter
   position: relative
@@ -42,6 +54,8 @@
   transition: transform 250ms ease-in-out
   &.active
     transform: rotate(90deg)
+  &.inverted
+    color: #fff
 
 .time-range-filter
   display: flex
