--- a/src/components/search/styles/FilterMenu.sass
+++ b/src/components/search/styles/FilterMenu.sass
@@ -31,6 +31,7 @@
   opacity: 0.7
   align-self: center
   align-items: center
+  margin: auto
   &:hover
     opacity: 1
     cursor: pointer
@@ -78,6 +79,7 @@
   display: inline-flex
   align-self: center
   margin: 1em
+  margin-left: auto
 
 .filter-drawer
   margin-top: 186px
